<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="textView">Look at my GUI</string>
    <string name="clickHere">CLICK HERE</string>
    <string name="checkHere">check this out!</string>
    <string name="switch1">Switch on/off</string>
    <string name="typeHere">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snack_message">The switch is now</string>
    <string name="flag">flag</string>
    <string name="textViewEmail">Enter your email address</string>
    <string name="textViewPass">Type your password</string>
    <string name="typehereEmail">Type email here</string>
    <string name="login">LOGIN</string>
    <string name="TextYourProfile">Your Profile</string>
    <string name="textYourName">Your name:</string>
    <string name="textYourEmail">Your email:</string>
    <string name="textEmailAddress">Enter your email</string>
    <string name="yourPicture">Your Picture:</string>
    <string name="informationPicture">Click the button above to take a picture</string>
    <string name="typeYourName">Enter your name</string>
    <string name="chat" translatable="false">Go to chat</string>
    <string name="send" translatable="false">SEND</string>
    <string name="receive" translatable="false">RECEIVE</string>
    <string name="alertMessage" translatable="false">Do you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alertmsg1">The selected row is: </string>
    <string name="alertmsg2">The database id is: </string>
    <string name="weather">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Message Here</string>
    <string name="fragmentID">ID=</string>
    <string name="fragmentbox">Is a Send Message</string>
    <string name="fragmentbutton">HIDE</string>
</resources>