<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/TextYourProfile"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/textYourName"
        />
    <EditText
        android:id="@+id/typeYourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeYourName"
        android:gravity="fill_horizontal"
        />

    <TextView
        android:id="@+id/textYourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/textYourEmail"
        />

    <EditText
        android:id="@+id/typeYourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textEmailAddress"
        android:gravity="fill_horizontal"
        />
    <TextView
        android:id="@+id/yourPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/yourPicture"
        />
    <ImageButton
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@android:drawable/picture_frame" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/informationPicture"
        />
</LinearLayout>