<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/textView"
        android:layout_column="0"
        android:layout_row="0"
        />

    <Button
        android:id="@+id/clickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickHere"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

    <CheckBox
        android:id="@+id/checkHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkHere"
        android:layout_column="1"
        android:layout_row="1"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch1"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_weight="1"
        />


    <EditText
        android:id="@+id/typeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere"
        android:gravity="fill_horizontal"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        />

</GridLayout>