<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/textView"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/clickHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickHere"
            android:layout_weight="1"
            android:gravity="fill"
            />

        <CheckBox
            android:id="@+id/checkHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkHere"
            android:layout_weight="1"
            android:gravity="fill"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            android:layout_weight="1"
            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch1"
            android:layout_weight="1"
            android:gravity="fill"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/typeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere"
        android:gravity="fill_horizontal"
        />
</LinearLayout>